# WordRush

./: .gitignore  CMakeLists.txt  README.md
data/state/: progress.tsv
docs/: architecture.md
include/wordrush/: application.hpp  companion.hpp  dashboard.hpp  drill_session.hpp  settings.hpp  storage.hpp  theme.hpp  training.hpp  types.hpp
src/: main.cpp
src/app/: application.cpp
src/core/: companion.cpp  settings.cpp  theme.cpp  training.cpp  types.cpp
src/storage/: wordbook_repository.cpp
src/tui/: dashboard.cpp  drill_session.cpp
